--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "format": "npm run prettier && npm run lint",
     "lint": "eslint .",
     "prettier": "prettier . --write",
     "preview": "vite preview"
