--- a/rust-wasm/Cargo.toml
+++ b/rust-wasm/Cargo.toml
@@ -9,3 +9,5 @@ crate-type=["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 image = "0.25"
+web-sys = { version = "0.3", features = ["console"] }
+console_error_panic_hook = "0.1"
