--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "format": "npm run prettier && npm run lint",
     "lint": "eslint .",
-    "prettier": "prettier . --write",
+    "prettier": "prettier src/ --write",
     "preview": "vite preview"
   },
   "dependencies": {
