--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -15,8 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ESLint
-        run: |
-          npm install eslint@8.10.0
+        run: npm install eslint@9.39.1
 
       - name: Run ESLint
         run: npx eslint .
