--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -18,5 +18,4 @@ jobs:
         run: npm install eslint@9.39.1
 
       - name: Run ESLint
-        run: npx eslint .
-          --config .eslintrc.js
+        run: npx eslint . --config eslint.config.js
