--- a/rust-wasm/Cargo.toml
+++ b/rust-wasm/Cargo.toml
@@ -11,3 +11,6 @@ wasm-bindgen = "0.2"
 image = "0.25"
 web-sys = { version = "0.3", features = ["console"] }
 console_error_panic_hook = "0.1"
+
+[dev-dependencies]
+rstest = "0.18"
